Swagger: version 3
