# backend/app/api/password_recovery.go
@@ -13,13 +13,13 @@ var recovery_users = make(map[string]string)
 
 // @Summary      Запрос на сброс пароля
 // @Description  Отправляет код подтверждения на email
-// @Tags         auth
+// @Tags         password_recovery
 // @Accept       json
 // @Produce      json
 // @Param        credentials  body  database.User  true  "Email и пароль"
-// @Success		 200 {Object} success_answer
-// @Failure		 405 {Object} error_answer
-// @Failure		 400 {Object} error_answer
+// @Success		 200 {object} Success_answer
+// @Failure		 405 {object} Error_answer
+// @Failure		 400 {object} Error_answer
 // @Router       /api/forgot_password [post]
 func PasswordRecovery_ForgotPassword(w http.ResponseWriter, r *http.Request) {
 	log.Println("Request to recovery password!")
@@ -29,7 +29,7 @@ func PasswordRecovery_ForgotPassword(w http.ResponseWriter, r *http.Request) {
 
 	if r.Method != http.MethodPost {
 		w.WriteHeader(http.StatusMethodNotAllowed)
-		json.NewEncoder(w).Encode(error_answer{
+		json.NewEncoder(w).Encode(Error_answer{
 			Error: "Method not allowed",
 			Code:  http.StatusMethodNotAllowed,
 		})
@@ -41,7 +41,7 @@ func PasswordRecovery_ForgotPassword(w http.ResponseWriter, r *http.Request) {
 	if err != nil {
 		log.Println("Cannot decode request")
 		w.WriteHeader(http.StatusBadRequest)
-		json.NewEncoder(w).Encode(error_answer{
+		json.NewEncoder(w).Encode(Error_answer{
 			Error: "Invalid JSON",
 			Code:  http.StatusBadRequest,
 		})
@@ -53,7 +53,7 @@ func PasswordRecovery_ForgotPassword(w http.ResponseWriter, r *http.Request) {
 	if err != database.ErrDuplicateUser {
 		log.Println("User not found or other errors")
 		w.WriteHeader(http.StatusBadRequest)
-		json.NewEncoder(w).Encode(error_answer{
+		json.NewEncoder(w).Encode(Error_answer{
 			Error: "User not found or other errors",
 			Code:  http.StatusBadRequest,
 		})
@@ -76,7 +76,7 @@ func PasswordRecovery_ForgotPassword(w http.ResponseWriter, r *http.Request) {
 
 	// Ответ об успехе
 	w.WriteHeader(http.StatusOK)
-	json.NewEncoder(w).Encode(success_answer{
+	json.NewEncoder(w).Encode(Success_answer{
 		Status: "OK",
 		Code:   http.StatusOK,
 	})
@@ -84,23 +84,23 @@ func PasswordRecovery_ForgotPassword(w http.ResponseWriter, r *http.Request) {
 
 // @Summary      Установка нового пароля
 // @Description  Меняет пароль после подтверждения кода
-// @Tags         auth
+// @Tags         password_recovery
 // @Accept       json
 // @Produce      json
-// @Param        credentials  body  code_verification  true  "Email и код"
-// @Success		 200 {Object} success_answer
-// @Failure		 405 {Object} error_answer
-// @Failure		 400 {Object} error_answer
+// @Param        credentials  body  Code_verification  true  "Email и код"
+// @Success		 200 {object} Success_answer
+// @Failure		 405 {object} Error_answer
+// @Failure		 400 {object} Error_answer
 // @Router       /api/commit_code_reset_password [post]
 func PasswordRecovery_CommitCode(w http.ResponseWriter, r *http.Request) {
 	log.Println("Request to recovery password!")
 	w.Header().Set("Content-Type", "application/json")
 
-	var request code_verification
+	var request Code_verification
 
 	if r.Method != http.MethodPost {
 		w.WriteHeader(http.StatusMethodNotAllowed)
-		json.NewEncoder(w).Encode(error_answer{
+		json.NewEncoder(w).Encode(Error_answer{
 			Error: "Method not allowed",
 			Code:  http.StatusMethodNotAllowed,
 		})
@@ -112,7 +112,7 @@ func PasswordRecovery_CommitCode(w http.ResponseWriter, r *http.Request) {
 	if err != nil {
 		log.Println("Cannot decode request")
 		w.WriteHeader(http.StatusBadRequest)
-		json.NewEncoder(w).Encode(error_answer{
+		json.NewEncoder(w).Encode(Error_answer{
 			Error: "Invalid JSON",
 			Code:  http.StatusBadRequest,
 		})
@@ -123,7 +123,7 @@ func PasswordRecovery_CommitCode(w http.ResponseWriter, r *http.Request) {
 	if code == "" {
 		log.Println("User not found")
 		w.WriteHeader(http.StatusBadRequest)
-		json.NewEncoder(w).Encode(error_answer{
+		json.NewEncoder(w).Encode(Error_answer{
 			Error: "User not found",
 			Code:  http.StatusBadGateway,
 		})
@@ -133,13 +133,13 @@ func PasswordRecovery_CommitCode(w http.ResponseWriter, r *http.Request) {
 	if code != request.Code {
 		log.Println("Code is incorrect")
 		w.WriteHeader(http.StatusBadRequest)
-		json.NewEncoder(w).Encode(error_answer{
+		json.NewEncoder(w).Encode(Error_answer{
 			Error: "Code is incorrect",
 			Code:  http.StatusBadGateway,
 		})
 	}
 	w.WriteHeader(http.StatusOK)
-	json.NewEncoder(w).Encode(success_answer{
+	json.NewEncoder(w).Encode(Success_answer{
 		Status: "ok",
 		Code:   http.StatusOK,
 	})
@@ -147,23 +147,23 @@ func PasswordRecovery_CommitCode(w http.ResponseWriter, r *http.Request) {
 
 // @Summary      Подтверждение кода для сброса пароля
 // @Description  Проверяет код и разрешает смену пароля
-// @Tags         auth
+// @Tags         password_recovery
 // @Accept       json
 // @Produce      json
-// @Param        credentials  body  update_password  true  "Email и пароль"
-// @Success		 200 {Object} success_answer
-// @Failure		 405 {Object} error_answer
-// @Failure		 400 {Object} error_answer
+// @Param        credentials  body  Update_password  true  "Email и пароль"
+// @Success		 200 {object} Success_answer
+// @Failure		 405 {object} Error_answer
+// @Failure		 400 {object} Error_answer
 // @Router       /api/reset_password [post]
 func PasswordRecovery_ResetPassword(w http.ResponseWriter, r *http.Request) {
 	log.Println("Request to recovery password!")
 	w.Header().Set("Content-Type", "application/json")
 
-	var request update_password
+	var request Update_password
 
 	if r.Method != http.MethodPost {
 		w.WriteHeader(http.StatusMethodNotAllowed)
-		json.NewEncoder(w).Encode(error_answer{
+		json.NewEncoder(w).Encode(Error_answer{
 			Error: "Method not allowed",
 			Code:  http.StatusMethodNotAllowed,
 		})
@@ -175,7 +175,7 @@ func PasswordRecovery_ResetPassword(w http.ResponseWriter, r *http.Request) {
 	if err != nil {
 		log.Println("Cannot decode request")
 		w.WriteHeader(http.StatusBadRequest)
-		json.NewEncoder(w).Encode(error_answer{
+		json.NewEncoder(w).Encode(Error_answer{
 			Error: "Invalid JSON",
 			Code:  http.StatusBadRequest,
 		})
@@ -186,7 +186,7 @@ func PasswordRecovery_ResetPassword(w http.ResponseWriter, r *http.Request) {
 	if code == "" {
 		log.Println("User not found")
 		w.WriteHeader(http.StatusBadRequest)
-		json.NewEncoder(w).Encode(error_answer{
+		json.NewEncoder(w).Encode(Error_answer{
 			Error: "User not found",
 			Code:  http.StatusBadRequest,
 		})
@@ -197,7 +197,7 @@ func PasswordRecovery_ResetPassword(w http.ResponseWriter, r *http.Request) {
 	if err != nil {
 		log.Println("Cannot update password")
 		w.WriteHeader(http.StatusBadRequest)
-		json.NewEncoder(w).Encode(error_answer{
+		json.NewEncoder(w).Encode(Error_answer{
 			Error: "Cannot update password",
 			Code:  http.StatusBadRequest,
 		})
@@ -206,7 +206,7 @@ func PasswordRecovery_ResetPassword(w http.ResponseWriter, r *http.Request) {
 	// Удаляем использованный код
 	delete(recovery_users, request.Email)
 	w.WriteHeader(http.StatusOK)
-	json.NewEncoder(w).Encode(success_answer{
+	json.NewEncoder(w).Encode(Success_answer{
 		Status: "ok",
 		Code:   http.StatusOK,
 	})
