# backend/app/api/tutors.go
@@ -45,7 +45,7 @@ func GiveTutorRole(w http.ResponseWriter, r *http.Request) {
 	}
 
 	w.WriteHeader(http.StatusOK)
-	json.NewEncoder(w).Encode(tutor_succes{Status: "Tutor role given", Code: http.StatusOK})
+	json.NewEncoder(w).Encode(Tutor_succes{Status: "Tutor role given", Code: http.StatusOK})
 }
 
 // @Summary      Добавление/обновление информации о тьюторе
@@ -53,9 +53,9 @@ func GiveTutorRole(w http.ResponseWriter, r *http.Request) {
 // @Tags         tutor
 // @Accept       json
 // @Produce      json
-// @Success      200         {object}  tutor_succes
-// @Failure      400         {object}  error_answer
-// @Failure      401         {object}  error_answer
+// @Success      200	{object}	Tutor_succes ""
+// @Failure      400	{object}	Error_answer ""
+// @Failure      401	{object}	Error_answer ""
 // @Router       /api/add_tutor [post]
 func ChangeTutorInformation(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodPost {
@@ -105,7 +105,7 @@ func ChangeTutorInformation(w http.ResponseWriter, r *http.Request) {
 	}
 
 	w.WriteHeader(http.StatusOK)
-	json.NewEncoder(w).Encode(tutor_succes{Status: "Tutor updated", Code: http.StatusOK})
+	json.NewEncoder(w).Encode(Tutor_succes{Status: "Tutor updated", Code: http.StatusOK})
 }
 
 // @Summary      Получение информации о тьюторе
@@ -113,10 +113,9 @@ func ChangeTutorInformation(w http.ResponseWriter, r *http.Request) {
 // @Tags         tutor
 // @Accept       json
 // @Produce      json
-// @Security     BearerAuth
 // @Success      200  {object}  database.Tutor
-// @Failure      400  {object}  error_answer
-// @Failure      401  {object}  error_answer
+// @Failure      400  {object}  Error_answer
+// @Failure      401  {object}  Error_answer
 // @Router       /api/get_tutor [get]
 func GetTutorInformation(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodPost {
