# backend/app/docs/swagger.json
@@ -29,19 +29,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.tutor_succes"
+                            "$ref": "#/definitions/api.Tutor_succes"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/api.error_answer"
+                            "$ref": "#/definitions/api.Error_answer"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/api.error_answer"
+                            "$ref": "#/definitions/api.Error_answer"
                         }
                     }
                 }
@@ -57,7 +57,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "password_recovery"
                 ],
                 "summary": "Установка нового пароля",
                 "parameters": [
@@ -67,7 +67,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.code_verification"
+                            "$ref": "#/definitions/api.Code_verification"
                         }
                     }
                 ],
@@ -75,19 +75,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "Object"
+                            "type": "struct"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "Object"
+                            "type": "struct"
                         }
                     },
                     "405": {
                         "description": "Method Not Allowed",
                         "schema": {
-                            "type": "Object"
+                            "type": "struct"
                         }
                     }
                 }
@@ -103,7 +103,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "password_recovery"
                 ],
                 "summary": "Запрос на сброс пароля",
                 "parameters": [
@@ -121,19 +121,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "Object"
+                            "type": "struct"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "Object"
+                            "type": "struct"
                         }
                     },
                     "405": {
                         "description": "Method Not Allowed",
                         "schema": {
-                            "type": "Object"
+                            "type": "struct"
                         }
                     }
                 }
@@ -141,11 +141,6 @@
         },
         "/api/get_tutor": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "Доступно только аутентифицированным пользователям с ролью тьютора",
                 "consumes": [
                     "application/json"
@@ -167,13 +162,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/api.error_answer"
+                            "$ref": "#/definitions/api.Error_answer"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/api.error_answer"
+                            "$ref": "#/definitions/api.Error_answer"
                         }
                     }
                 }
@@ -196,13 +191,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "Object"
+                            "$ref": "#/definitions/api.Success_answer"
                         }
                     },
                     "405": {
                         "description": "Method Not Allowed",
                         "schema": {
-                            "type": "Object"
+                            "type": "struct"
                         }
                     }
                 }
@@ -239,7 +234,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "password_recovery"
                 ],
                 "summary": "Подтверждение кода для сброса пароля",
                 "parameters": [
@@ -249,7 +244,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.update_password"
+                            "$ref": "#/definitions/api.Update_password"
                         }
                     }
                 ],
@@ -257,19 +252,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "Object"
+                            "$ref": "#/definitions/api.Success_answer"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "Object"
+                            "$ref": "#/definitions/api.Error_answer"
                         }
                     },
                     "405": {
                         "description": "Method Not Allowed",
                         "schema": {
-                            "type": "Object"
+                            "$ref": "#/definitions/api.Error_answer"
                         }
                     }
                 }
@@ -285,7 +280,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "login"
                 ],
                 "summary": "Аутентификация пользователя",
                 "parameters": [
@@ -337,7 +332,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "refresh_token"
                 ],
                 "summary": "Обновление JWT-токена",
                 "parameters": [
@@ -347,7 +342,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.refresh_token"
+                            "$ref": "#/definitions/api.Refresh_token"
                         }
                     }
                 ],
@@ -355,7 +350,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "Object"
+                            "$ref": "#/definitions/api.Success_answer"
                         }
                     }
                 }
@@ -371,7 +366,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "registration"
                 ],
                 "summary": "Проверка кода подтверждения",
                 "parameters": [
@@ -381,7 +376,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.code_verification"
+                            "$ref": "#/definitions/api.Code_verification"
                         }
                     }
                 ],
@@ -389,19 +384,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "Object"
+                            "$ref": "#/definitions/api.Tokens_answer"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "Object"
+                            "$ref": "#/definitions/api.Error_answer"
                         }
                     },
                     "405": {
                         "description": "Method Not Allowed",
                         "schema": {
-                            "type": "Object"
+                            "$ref": "#/definitions/api.Error_answer"
                         }
                     }
                 }
@@ -417,7 +412,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "registration"
                 ],
                 "summary": "Отправка email для регистрации",
                 "parameters": [
@@ -427,7 +422,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.email_struct"
+                            "$ref": "#/definitions/api.Email_struct"
                         }
                     }
                 ],
@@ -435,25 +430,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "Object"
+                            "$ref": "#/definitions/api.Success_answer"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "Object"
+                            "$ref": "#/definitions/api.Error_answer"
                         }
                     },
                     "409": {
                         "description": "Conflict",
                         "schema": {
-                            "type": "Object"
+                            "$ref": "#/definitions/api.Error_answer"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "Object"
+                            "$ref": "#/definitions/api.Error_answer"
                         }
                     }
                 }
@@ -469,26 +464,26 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "registration"
                 ],
                 "summary": "Установка пароля",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "Object"
+                            "$ref": "#/definitions/api.Tokens_answer"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "Object"
+                            "$ref": "#/definitions/api.Error_answer"
                         }
                     },
                     "405": {
                         "description": "Method Not Allowed",
                         "schema": {
-                            "type": "Object"
+                            "$ref": "#/definitions/api.Error_answer"
                         }
                     }
                 }
@@ -496,7 +491,7 @@
         }
     },
     "definitions": {
-        "api.code_verification": {
+        "api.Code_verification": {
             "type": "object",
             "properties": {
                 "code": {
@@ -507,7 +502,7 @@
                 }
             }
         },
-        "api.email_struct": {
+        "api.Email_struct": {
             "type": "object",
             "properties": {
                 "email": {
@@ -515,7 +510,7 @@
                 }
             }
         },
-        "api.error_answer": {
+        "api.Error_answer": {
             "type": "object",
             "properties": {
                 "code": {
@@ -526,7 +521,7 @@
                 }
             }
         },
-        "api.refresh_token": {
+        "api.Refresh_token": {
             "type": "object",
             "properties": {
                 "refresh_token": {
@@ -534,7 +529,7 @@
                 }
             }
         },
-        "api.tutor_succes": {
+        "api.Success_answer": {
             "type": "object",
             "properties": {
                 "code": {
@@ -545,7 +540,29 @@
                 }
             }
         },
-        "api.update_password": {
+        "api.Tokens_answer": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "refresh_token": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.Tutor_succes": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.Update_password": {
             "type": "object",
             "properties": {
                 "email": {
